--- a/css/portifolio.css
+++ b/css/portifolio.css
@@ -19,6 +19,7 @@
             flex-direction: column;
             align-items: center;
             padding: 20px;
+            height: 100% !important;
             
         }
         .borderproject{
