--- a/css/style_infPePf.css
+++ b/css/style_infPePf.css
@@ -1,3 +1,7 @@
+body{
+    background: linear-gradient(23deg, black 50%, #00917e, black 53%);
+}
+
 
 main{
     display: flex;
@@ -6,6 +10,7 @@ main{
     flex-direction: column;
     gap:  30px 0;
 }
+
 
 .card {
     background-color: #000000;
@@ -16,13 +21,35 @@ main{
     border: 3px solid #00917e;
     border-radius: 20px;
     text-align: justify;
+    transition: opacity 1s ease;
+    animation: fadeIn 2s ease forwards;
+  }
+  
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+  
+    to {
+      opacity: 1;
+    }
+  }
+
+  .sidebar{
+    text-align: justify;
+    font-size: 18pt;
 }
+
+  .sidebar ul, .sidebar ul a, .sidebar h1{ 
+    color: #00917e;
+   }
+
 .card img{
     width: 100%;
     display: block;
     border-radius: 20px;
     margin-bottom: 20px;
-    height: 500px;
+    height: 400px;
     width: 100%;
 }
 
@@ -127,6 +154,62 @@ main{
     transform: translateX(55rem);
   }
 
+  
+
+.icons_interation_user{
+    position: absolute;
+    left: 14%;
+    height: 350px !important;
+    width: auto !important;
+    animation: escudo_floting 10s ease-in-out infinite;
+    transform-style:flat;
+}
+.escudo_floting {
+    position: absolute;
+    right: 125%;
+    top: 15%;
+    height: 350px !important;
+    width: auto !important;
+    animation: escudo_floting 10s ease-in-out infinite;
+    transform-style:flat;
+}
+@keyframes escudo_floting {
+    0%, 100% {
+        transform: translateY(0);
+        filter: drop-shadow(0px 0px 60px #00917e);
+    }
+    50% {
+        transform: translateY(-80px);
+        filter: drop-shadow(0px 0px 60px #000f91);
+    }
+}
+
+
+.key_move {
+    position: absolute;
+    right: 115%;
+    top: 32%;
+    height: 350px !important;
+    width: auto !important;
+    animation: key_flip 10s ease-in-out infinite;
+    transform-style:flat; /* Preserve 3D transform for flip effect */
+}
+
+@keyframes key_flip {
+    0% {
+        transform: rotateY(0deg);
+        filter: drop-shadow(0px 0px 60px #00917e);
+    }
+    50% {
+        transform: rotateY(-180deg);
+        filter: drop-shadow(0px 0px 60px #2c0091);
+    }
+    100% {
+        transform: rotateY(-360deg);
+        filter: drop-shadow(0px 0px 60px #000f91);
+    }
+}
+
   .laystall_floting, .icon_trans_floting{ 
     position: absolute;
     left: 115%;
@@ -158,6 +241,49 @@ main{
     }
     50% {
         transform: translateY(-80px);
-        filter: drop-shadow(0px 0px 60px #00917e);
+        filter: drop-shadow(0px 0px 60px #000f91);
     }
 }
+
+
+
+
+
+.profile-card {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 20px;
+}
+.box_img_sobre_membros{
+    max-width: 300px;
+    max-height: 300px;
+    width: 775px;
+    height: 455px;
+    background-color: #17ab93;
+    transform: rotate(45deg);
+    box-shadow: 0 0 20px #17ab93;
+    margin: 50px 150px 50px 90px;
+  }
+  
+  .box_img_sobre_membros::after{
+    background-color: #000000;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 90%;
+    height: 90%;
+    
+  }
+  
+  .box_img_sobre_membros img {
+    position: absolute;
+    height: 300px;
+    width: 300px;
+    z-index: 1;
+    border: 2px solid #00917e;
+    box-shadow: 0 0 20px #17ab93;
+    transform: rotate(-45deg);
+  }
+  
