--- a/css/perfilPf.css
+++ b/css/perfilPf.css
@@ -304,8 +304,8 @@ textarea{
   position: relative;
   top: 5%;
   padding: 15px;
-  border: #081a17 5px solid;
-  background-color: #0f3630;
+  border: #133f38 5px solid;
+  background-color: #0e2824;
   overflow: hidden;
 }
 .dados-pf_edit{
