--- a/css/perfilUsr.css
+++ b/css/perfilUsr.css
@@ -337,8 +337,8 @@ textarea{
   top: 10%;
   padding: 15px;
   padding-top:90px;
-  border: #081a17 5px solid;
-  background-color: #0f3630;
+  border: #133f38 5px solid;
+  background-color: #0e2824;
 }
 .dados-usr_edit{
   position: relative;
