--- a/css/prof.css
+++ b/css/prof.css
@@ -50,6 +50,8 @@ body{
             flex-wrap: wrap;
             gap: 30px 0;
             justify-content: center;
+            height: 100% !important;
+
         }
 
         .profDetails {
