--- a/style_home.css
+++ b/style_home.css
@@ -645,6 +645,7 @@ padding: 10px;
   display: block;
   margin: 20px 0 20px 25px;
   border-radius: 50%;
+  object-fit: cover !important;
 }
 
 .name_of_box_perfils {
