--- a/css/avaliar.css
+++ b/css/avaliar.css
@@ -47,18 +47,18 @@
 body, html{
 background-color: rgb(0, 0, 0);
 height: 100%;
-
+overflow: hidden;
 }
 
 .avaliar{
     background-color: rgb(5, 59, 61);
     border: 7px solid rgb(12, 110, 113);
-
+    box-shadow: 0 0 40px #00917e;
     width: 650px;
     height: 950px;
-    border-radius: 15px;
+    border-radius: 25px;
     overflow-y: auto;
-    position: relative;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -83,7 +83,6 @@ height: 100%;
 #img_avaliar{
     width: 300px;
     height: 300px;
-
     border: 10px solid rgb(13, 84, 72);
     border-radius: 50%;
     background-color: green;
@@ -99,9 +98,13 @@ height: 100%;
     cursor: pointer;
   
 }
-#img_avaliar img{
 
+#img_avaliar img {
+    object-fit: cover;
+    width: 300px;
+    height: 300px;
 }
+
 .p_avaliar{
     color: #ffffff;
     font-size: 22px;
