--- a/css/style_home.css
+++ b/css/style_home.css
@@ -411,25 +411,33 @@ flex-wrap: wrap; */
   padding: 0 30px 5pc 30px ;
 }
 
-.img_security_garantia_aperto{
-  height: 510px;
-    width: 900px;
-    border-radius: 50px;
-    margin: 0 0 0 -80px;
 
+.img_security_garantia_aperto {
+    height: 510px;
+    width: 900px;
+    border: 2px solid #00917e;
+    border-radius: 40px;
+    /* box-shadow: 0 0 20px #00917e; */
+    margin: 0 0 0 -80px;
 }
+
 .box_text_info_garantia {
   position: relative;
+  display: flex;
+  flex-direction: column;
   max-width: 900px;
+  height: 510px;
+  border-radius: 40px;
   margin: 0;
-  padding:30px;
+  padding: 30px;
   flex: 2;
   text-align: center;
   backdrop-filter: blur(10px);
   background-color: rgba(27, 50, 48, 0.3);
-  border-radius: 50px;
   box-sizing: border-box;
   border: solid 2px #00917e;
+  align-items: center;
+  justify-content: center;
 }
 
 
