--- a/css/viewPerfilPfForUsr.css
+++ b/css/viewPerfilPfForUsr.css
@@ -424,3 +424,9 @@ form {
     z-index: 10;
     overflow: hidden;
 }
+
+p #nAvaliadoPf {
+    margin-left: 17px !important;
+    margin-top: 10px !important;
+    width: 350px !important;
+}
