--- a/css/carroselDeComentarios.css
+++ b/css/carroselDeComentarios.css
@@ -1,6 +1,7 @@
 .carousel {
     position: relative;
     width: 100%;
+    margin-top: -130px;
     overflow: hidden;
     height: 100%;
     display: flex;
@@ -29,6 +30,7 @@
     color: white;
     width: 100%;
     height: 100%;
+    margin-top: 30px;
     padding-left: 8%;
     padding-right: 10%;
     text-align: center;
@@ -77,8 +79,7 @@ background-color: black;
     text-align: center;
     padding: 10px 0;
     position: absolute;
-    top:92%;
-    
+    top:94%;    
 }
 
 .carousel-indicators .indicator {
