--- a/css/portifolio.css
+++ b/css/portifolio.css
@@ -1,165 +1,212 @@
+* {
+  box-sizing: border-box;
+  font-size: 22px;
+}
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: black;
+  margin-top: 7%;
+  overflow: scroll !important;
+}
+#topPage {
+  margin-top: 125px;
+}
+.portfolio {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  height: 100% !important;
+}
 
-        *{
-            box-sizing: border-box;
-        font-size: 22px;
-        }
-       body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: black;
-            margin-top: 7%;
-            overflow: scroll !important;
-        }
-        #topPage{
-            margin-top: 125px;
-        }
-        .portfolio {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 20px;
-            height: 100% !important;
-            
-        }
-        .borderproject{
-            border: 5px solid rgb(14, 78, 64);
+.comentario_alert {
+  background-color: #00917e6e;
+  border-left: 15px solid #00917e;
+  border-right: 15px solid #00917e;
+  padding: 20px 50px;
+  border-radius: 0px 25px 25px 25px; /*SKKKSKSKSKSKKSKSKKSKSKKS comedor de veia */
+  color: white;
+  position: absolute;
+  text-align: justify;
+  width: 650px;
+  z-index: 1;
+  top: 27%;
+  transition: opacity 1s ease;
+  animation: fadeIn 2s ease forwards, escudo_floting 10s ease-in-out infinite;
+  transform-style: flat;
+}
+@keyframes escudo_floting {
+  0%,
+  100% {
+    transform: translateY(0);
+    filter: drop-shadow(0px 0px 60px #00917e);
+  }
+  50% {
+    transform: translateY(-80px);
+  }
+}
 
-        }
-        .project {
-            color: #fff;
-            background-color: rgb(8, 43, 36);
-            border: 5px solid rgb(14, 78, 64);
-            margin: 5px;
-            padding: 10px !important;
-            width: 750px;
-            height: auto;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-            transition: transform 0.3s ease;
-            position: relative;
-            border-radius: 15px;
-            display: flex;
-            flex-direction: column;
-            place-items: center;
-           
-        }
-        .project:hover {
-            transform: scale(1.05);
-            z-index: 10; /* Bring to front on hover */
+.comentario_alert::before {
+  content: "";
+  background: linear-gradient(136deg, #00917e 50%, transparent);
+  position: absolute;
+  height: 25px;
+  width: 25px;
+  left: -28px;
+  top: 6px;
+  rotate: -45deg;
+}
+.borderproject {
+  border: 5px solid rgb(14, 78, 64);
+}
+.project {
+  color: #fff;
+  background-color: rgb(8, 43, 36);
+  border: 5px solid rgb(14, 78, 64);
+  margin: 5px;
+  padding: 10px !important;
+  width: 750px;
+  height: auto;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+  position: relative;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  place-items: center;
+}
+.project:hover {
+  transform: scale(1.05);
+  z-index: 10; /* Bring to front on hover */
+}
+.project:hover .carousel {
+  margin-top: -20px;
+}
+.carousel {
+  position: absolute !important;
+  top: 0 !important;
+  left: 100%;
+  width: 600px;
+  margin-left: 10px !important;
+  display: none;
+  flex-direction: column;
+  overflow: hidden;
+  z-index: 10; /* Ensure it is on top */
+  background-color: transparent; /* To avoid transparency issues */
+  align-items: center; /* Center the images horizontally */
+  background-color: rgb(8, 43, 36);
+  border: 5px solid rgb(14, 78, 64);
+  border-radius: 15px;
+  padding: 15px;
+}
+#title_project {
+  font-size: 32px;
+  margin-bottom: 0;
+}
+#title_project,
+#desc_project {
+  color: rgb(178, 178, 178);
+  text-align: center;
+}
+#desc_project {
+  color: rgb(255, 255, 255);
+  margin: 10px;
+}
+#date_project {
+  color: rgb(255, 255, 255);
+  margin: 10px;
+  text-align: center;
+  border: 5px solid rgb(14, 78, 64);
+  border-radius: 15px;
+  background-color: #0a3b3d;
+  width: 50%;
+}
+.carousel:last-child {
+  margin-top: -175px !important;
+}
+.carousel_inner {
+  display: flex;
+  transition: transform 0.5s ease;
+}
+.carousel img {
+  width: 500px;
+  object-fit: cover;
+  border-radius: 15px;
+  flex-shrink: 0;
+  display: none; /* Hide all images by default */
+}
+.carousel img.active {
+  display: block; /* Show only the active image */
+}
+.carousel_control {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+.bnt_left,
+.bnt_right {
+  background: rgba(0, 0, 0, 0.5);
+  border: none;
+  color: white;
+  font-size: 18px;
+  cursor: pointer;
+  position: absolute;
+  top: 35%;
+  font-size: 20px;
 
-        }
-        .project:hover .carousel{
-            margin-top: -20px;
-
-
-        }
-        .carousel {
-            position: absolute !important;
-            top: 0 !important;
-            left: 100%;
-            width: 600px;
-            margin-left: 10px !important;
-            display: none;
-            flex-direction: column;
-            overflow: hidden;
-            z-index: 10; /* Ensure it is on top */
-            background-color: transparent; /* To avoid transparency issues */
-            align-items: center; /* Center the images horizontally */
-            background-color: rgb(8, 43, 36);
-            border: 5px solid rgb(14, 78, 64);
-            border-radius: 15px;
-            padding: 15px;
-
-        }
-        #title_project{
-            font-size: 32px;
-            margin-bottom: 0;
-        }
-        #title_project, #desc_project{
-            color: rgb(178, 178, 178);
-            text-align: center;
-        }
-        #desc_project{
-            color: rgb(255, 255, 255);
-            margin: 10px;
-        }
-        #date_project{
-            color: rgb(255, 255, 255);
-            margin: 10px;
-            text-align: center;
-            border: 5px solid rgb(14, 78, 64);
-            border-radius: 15px;
-            background-color:  #0a3b3d;
-            width: 50%;
-
-        }
-        .carousel:last-child{
-            margin-top: -175px !important;
-        }
-        .carousel_inner {
-            display: flex;
-            transition: transform 0.5s ease;
-        }
-        .carousel img {
-            width: 500px;
-            object-fit: cover;
-            border-radius: 15px;
-            flex-shrink: 0;
-            display: none; /* Hide all images by default */
-        }
-        .carousel img.active {
-            display: block; /* Show only the active image */
-        }
-        .carousel_control {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 10px;
-        }
-        .bnt_left, .bnt_right {
-            background: rgba(0,0,0,0.5);
-            border: none;
-            color: white;
-            font-size: 18px;
-            cursor: pointer;
-            position: absolute;
-            top: 35%;
-            font-size: 20px;
-
-            width: 40px;
-            height: 40px;
-            text-align: center;
-            border-radius: 50%;
-            border: solid 3px rgb(11, 96, 82);
-            box-shadow: 0 0 15px rgb(11, 96, 82), inset 0 0 15px rgb(11, 96, 82);
-        }
-        .bnt_left{
-            left:5px;
-        }
-        .insert_service{
-            font-size: 25px;
-            color: #fff;
-            text-transform: capitalize;
-            text-decoration: none;
-            text-align: center;
-        }
-        .insert_service:hover{
-            scale: 1.1;
-            transition: 0.5s;
-        }
-        
-        .bnt_right {
-           right: 5px;
-        }
-        #titlePage{
-            color:rgb(11, 96, 82);
-            font-size: 35px !important;
-            text-align: center;
-        }
-        .bnt_left:hover, .bnt_right:hover {
-            scale: 1.1;
-            transition: 0.5s;
-        }
-        .project:hover + .project + .borderproject {
-            margin-top: 340px; /* Adjust this value as needed */
-            
-        }
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  border-radius: 50%;
+  border: solid 3px rgb(11, 96, 82);
+  box-shadow: 0 0 15px rgb(11, 96, 82), inset 0 0 15px rgb(11, 96, 82);
+}
+.bnt_left {
+  left: 5px;
+}
+.insert_service {
+    margin-top: 25px;
+  font-size: 25px;
+  color: #fff;
+  text-transform: capitalize;
+  text-decoration: none;
+  text-align: center;
+  
+}
+.insert_service:hover {
+  scale: 1.1;
+  transition: 0.5s;
+  color: white;
+  text-decoration: none;
+}
+a.insert_service{
+  border: solid 5px rgb(11, 96, 82);
+  padding: 10px;
+  border-radius: 8px;
+  background:   rgb(11, 96, 82);
+  
+  
+}
+a.insert_service:hover {
+    scale: 1.1;
+    transition: 0.5s;
+    background:  rgb(5, 43, 37);
+}
+.bnt_right {
+  right: 5px;
+}
+#titlePage {
+  color: rgb(11, 96, 82);
+  font-size: 35px !important;
+  text-align: center;
+}
+.bnt_left:hover,
+.bnt_right:hover {
+  scale: 1.1;
+  transition: 0.5s;
+}
+.project:hover + .project + .borderproject {
+  margin-top: 340px; /* Adjust this value as needed */
+}
